# systems_for_ml_meeting_assistant_multiagent

./: .env.example  .gitignore  CONTRIBUTIONS.md  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
agents/: __init__.py  base.py  config.py  coordinator.py  drafter.py  extractor.py  reviewer.py  summarizer.py  worker_util.py
bench/: __init__.py  metrics.py  plot.py  runner.py  system_sampler.py  trace.py  vllm_metrics.py
paper/: references.bib  related_work.tex
pipeline/: __init__.py  base.py  langgraph_pipeline.py  parallel.py  sequential.py
prompts/: coordinator.md  drafter.md  extractor.md  reviewer.md  summarizer.md  transcript_generator.md
results/figures/: summary.csv
results/runs/: large_finance__langgraph__rep0.json  large_finance__langgraph__rep1.json  large_finance__langgraph__rep2.json  large_finance__parallel__rep0.json  large_finance__parallel__rep1.json  large_finance__parallel__rep2.json  large_finance__sequential__rep0.json  large_finance__sequential__rep1.json  large_finance__sequential__rep2.json  large_meetingbank__langgraph__rep0.json  large_meetingbank__langgraph__rep1.json  large_meetingbank__langgraph__rep2.json  large_meetingbank__parallel__rep0.json  large_meetingbank__parallel__rep1.json  (+40 more)
scripts/: generate_transcripts.py  launch_vllm_8b.sh  make_synthetic_transcripts.py  mock_vllm_server.py
tests/: test_metrics.py  test_pipeline.py  test_reviewer.py  test_vllm_metrics.py
transcripts/: large_finance.txt  large_meetingbank.txt  medium_finance.txt  medium_welsh.txt  small_ami.txt  small_swe.txt
